fixed broken style link and added FA icons

--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,14 @@ header .content-wrapper {
   flex-flow: row wrap;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .header-divider {
   background: #3a3a3a; 
   height: 1px;
@@ -317,6 +325,11 @@ input[type=button] {
 .features p {
   text-align: center;
   margin: 0;
+}
+
+.features i {
+  font-size: 3.75em;
+        margin-bottom: 40px;
 }
 
 /* Reviews */
@@ -754,6 +767,7 @@ input[type=button] {
     .features article {
       flex-basis: 33%;
     }
+
     
     /* Reviews */
   
